# sopsy

./: .env.example  .envrc  .gitignore  .gitleaks.toml  .secrets.baseline  2  AGENT.md  Brewfile  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md  codecov.yml  justfile  lefthook.yml
.github/workflows/: ci.yml  release.yml  secret-scan.yml
docs/: REQUIREMENTS.md  architecture.mmd  enclave-security-model.mmd  guide-admin.md  guide-developer.md  guide-member.md  guide-owner.md  security-engineer-critique.md  sopsy-check.mmd  sopsy-process.mmd  sopsy-sequence-01.mmd  staff-engineer-critique.md
docs/known-issues/: engineering-critique.md
src/: age.rs  cli.rs  config.rs  error.rs  help.rs  keystore.rs  lib.rs  main.rs  ui.rs
src/commands/: approve.rs  check.rs  completion.rs  deps.rs  doctor.rs  edit.rs  init.rs  join.rs  mod.rs  recipient.rs  secrets.rs
src/demo/: README.md  vhs-quick.txt  vhs.txt
src/enclave/: mod.rs
src/git/: mod.rs
src/sops/: mod.rs
tests/: check.rs  cli.rs  completion.rs  deps.rs  doctor.rs  edit.rs  enclave.rs  git.rs  init.rs  recipient.rs  secrets.rs  sops.rs
