[package]
name = "sopsy"
version = "0.1.0"
edition = "2024"
description = "The missing developer experience for SOPS"
license = "MIT"
repository = "https://github.com/kigster/sopsy.git"
homepage = "https://github.com/kigster/sopsy.git"
keywords = ["sops", "secrets", "age", "macos", "enclave"]
categories = ["command-line-utilities", "config"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
indicatif = "0.18.4"
inquire = "0.9.4"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
# serde_yaml is deprecated/archived upstream; serde_yaml_ng is the actively
# maintained drop-in replacement used for `.sops.yaml` and `.sopsy.yml`.
serde_yaml_ng = "0.10.0"
thiserror = "2.0.17"
tempfile = "3.27.0"
toml = "1.1.2"
which = "8.0.4"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
serial_test = "3.2.0"
