[package]
name = "sopsy"
version = "1.1.2"
edition = "2024"
description = "The missing developer experience for SOPS"
license = "MIT"
repository = "https://github.com/kigster/sopsy.git"
homepage = "https://github.com/kigster/sopsy.git"
keywords = ["sops", "secrets", "age", "macos", "enclave"]
categories = ["command-line-utilities", "config"]

[dependencies]
anyhow = "1.0.103"
# `wrap_help` makes clap honor terminal width and the `max_term_width` cap.
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete = "4.6"
color-eyre = "0.6.5"
# RFC3339 timestamps and human-friendly duration parsing/formatting for the
# join-request freshness window (`requested_at` / `join_request_ttl`).
humantime = "2.2"
indicatif = "0.18.4"
inquire = "0.9.4"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
# serde_yaml is deprecated/archived upstream; serde_yaml_ng is the actively
# maintained drop-in replacement used for `.sops.yaml` and `.sopsy.yml`.
serde_yaml_ng = "0.10.0"
thiserror = "2.0.17"
tempfile = "3.27.0"
toml = "1.1.2"
which = "8.0.4"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
serial_test = "3.2.0"
